fix: dialog and select behaviour with overflow (#6)

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -21,7 +21,8 @@
 }
 
 .select__options {
-    @apply absolute z-20 mt-2 w-full rounded-theme-sm bg-background text-background-contrast py-2 border border-neutral
+    @apply fixed z-20 mt-2 w-full max-w-[420px] max-h-[300px] overflow-y-auto rounded-theme-sm bg-background
+    text-background-contrast py-2 border border-neutral focus-visible:outline-none
 }
 
 .select__option {
@@ -33,7 +34,7 @@
 }
 
 .select__endAdornment {
-    @apply absolute inset-y-0 right-0 flex items-center pr-4
+    @apply absolute inset-y-0 right-0 flex items-center pr-4 focus-visible:outline-none
 }
 
 .select__endAdornment__icon {
@@ -41,7 +42,7 @@
 }
 
 .select__startAdornment {
-    @apply absolute inset-y-0 left-0 flex items-center pl-4
+    @apply absolute inset-y-0 left-0 flex items-center pl-4 focus-visible:outline-none
 }
 
 .select__startAdornment__icon {
